# picos

./: .gitignore  CMakeLists.txt  LICENSE  README.md  doxygen.ini
src/: main.c  picos.c  picos.h  picos.s
toolchains/: gcc-arm-none-eabi_toolchain.cmake
